Fix two problems that the time runs late on virt68k. - The time between the time the alarm occurred and the time read by   TIME_* register in the next interrupt handler was not accumulated. - With the one-shot timer method, once the host time prolongs, the   guest time will never be able to catch up with the host time again. New one does: - The driver maintains its (guest's) time (as sc_alarm_time) and always   set the next alarm sc_interval_ns after the previous alarm. - gfrtc_set_alarm() takes an absolute time instead of a relative time   as the argument. PR kern/57980.  Confirmed on QEMU.